--- a/Source/Falcon/src/Falcon.Web.Site/Views/Questions/Delete.cshtml
+++ b/Source/Falcon/src/Falcon.Web.Site/Views/Questions/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Falcon.Database.Question
+﻿@model Falcon.EFCommonContext.DbModel.Question
 
 @{
     Layout = null;
@@ -74,14 +74,6 @@
             </dd>
     
             <dt>
-                @Html.DisplayNameFor(model => model.CreatorID)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.CreatorID)
-            </dd>
-    
-            <dt>
                 @Html.DisplayNameFor(model => model.CreatedDate)
             </dt>
     
@@ -111,6 +103,14 @@
     
             <dd>
                 @Html.DisplayFor(model => model.Category.Name)
+            </dd>
+    
+            <dt>
+                @Html.DisplayNameFor(model => model.QuestionBoost.Name)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.QuestionBoost.Name)
             </dd>
     
         </dl>
