--- a/Source/Falcon/src/Falcon.Web.Site/Views/Questions/Index.cshtml
+++ b/Source/Falcon/src/Falcon.Web.Site/Views/Questions/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Falcon.Database.Question>
+﻿@model IEnumerable<Falcon.EFCommonContext.DbModel.Question>
 
 @{
     Layout = null;
@@ -39,9 +39,6 @@
                 @Html.DisplayNameFor(model => model.Weight)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CreatorID)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.CreatedDate)
             </th>
             <th>
@@ -52,6 +49,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Category.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.QuestionBoost.Name)
             </th>
             <th></th>
         </tr>
@@ -80,9 +80,6 @@
                 @Html.DisplayFor(modelItem => item.Weight)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CreatorID)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.CreatedDate)
             </td>
             <td>
@@ -93,6 +90,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Category.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.QuestionBoost.Name)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
